# celestialink

./: README.md  __init__.py  __main__.py  big_run.csv  examples.ipynb  pyproject.toml  requirements.txt
src/segmented_svc/: ___init__.py  segmented_svc.py
src/segmented_svc/tools/: analyzing.py  binning.py  classifying.py  clustering.py
